architecture updated